package edu.fiuba.algo3.modelo;

public interface RefineriaDeGas {
    
	public int extraerGasDe(Volcan unVolcan);
    
    public int obtenerGas();
    
    public boolean tieneRefineria();
}
